# humane-tracker-1

./: .cursorindexingignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  biome.json  humane-tracker-backup-2025-11-29.json  wrangler.toml
.beads/: config.yaml  deletions.jsonl  issues.jsonl
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: SURGE_SETUP.md
.github/workflows/: build-pr.yml  build.yml  deploy-cloudflare.yml  deploy-surge.yml
humane-cli/: humane_cli.py  justfile  pyproject.toml  test_humane_cli.py
humane-tracker/: .env  .env.example  .firebaserc  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEXIE_CLOUD_MIGRATION.md  PRD.md  README.md  ROADMAP.md  TAG-HABITS-SPEC.md  TESTING.md  cypress.config.ts  deploy-surge.sh  deploy.sh  index.html  justfile  package-lock.json  package.json  playwright.config.ts  serve-report-https.js  tsconfig.json  vite.config.ts
humane-tracker/.firebase/: hosting.YnVpbGQ.cache
humane-tracker/cypress/: tsconfig.json
humane-tracker/public/: test-clicks.html
humane-tracker/scripts/: generate-version.js  generate-version.sh
humane-tracker/src/: App.css  App.test.tsx  App.tsx  TestApp.tsx  TestLoginApp.tsx  generated_version.ts  index.css  index.tsx  sw.ts  vite-env.d.ts
humane-tracker/tests/: affirmation-tally.spec.ts  anonymous-init.spec.ts  bug-report.spec.ts  crash-handling.spec.ts  debug-logs.spec.ts  habit-click-no-auth.spec.ts  habit-click.spec.ts  habit-settings-add.spec.ts  habit-tracker.spec.ts  (+10 more)
retros/: 2025-12-14.md  _retro_state.json
zz-chop-logs/: README.md
(+135 files in other folders)
