[project]
name = "humane-cli"
version = "0.1.0"
description = "TUI for exploring humane-tracker backup data"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "rich>=13.9.0",
]

[project.scripts]
humane-cli = "humane_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
